# AudioEditor-AU

./: AudioPeakItem.cpp  AudioPeakItem.h  AudioRulerItem.cpp  AudioRulerItem.h  AudioRullerView.cpp  AudioRullerView.h  AudioScaleItem.cpp  AudioScaleItem.h  AudioSelectItem.cpp  AudioSelectItem.h  AudioTimelineView.cpp  AudioTimelineView.h  CMakeLists.txt  QGraphics.md  README.md  WavThumb.cpp  WavThumb.h  Widget.cpp  Widget.h  WidgetTest.cpp  WidgetTest.h  main.cpp  rebase4.txt  thb35B4.tmp  wavthumbtest.tmp  新建 Markdown.md
